<resources>
    <string name="app_name">Restaurant Reviews</string>
    <string name="author_name">Author: %1$s</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="review_title">%1$s</string>
    <string name="review_date">Date Posted: %1$s</string>
    <string name="review_overall">Overall Rating: %1$s /5"</string>
    <string name="review_service">Service Rating: %1$s /5</string>
    <string name="review_food">Food Rating: %1$s /5</string>
    <string name="review_content">%1$s</string>
    <string name="review_food_name">%1$s</string>
    <string name="add_review">Add Review</string>
    <string name="search_rest">Search Restaurant</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_account">My Account</string>
    <string name="add_review_desc">Go To Add Review</string>
    <string name="search_rest_desc">Go To Search Restaurants</string>
    <string name="my_reviews_desc">Go To My Reviews</string>
    <string name="my_account_desc">Go To My Account</string>
    <string name="user_profile_picture">Profile Picture</string>
    <string name="user_name">User Name</string>
    <string name="user_edit">Edit Icon</string>
    <string name="user_avg">Avg Review Score \n %1$s / 5</string>
    <string name="user_total">Total Reviews\n %1$s </string>
    <string name="user_total_likes">Total Likes\n %1$s </string>
    <string name="user_sign_out">Sign Out</string>
    <string name="user_change_username">Change Username</string>
    <string name="user_change_password">Change Password</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_email_desc">Email</string>
    <string name="login_password_desc">Password</string>
    <string name="sign_up_success">You have successfully signed up as</string>
    <string name="sign_up_failure">Failed to sign up. Please try again.</string>
    <string name="sign_in_success">You have successfully signed in as</string>
    <string name="sign_up_username">User Name</string>
    <string name="sign_up_register">Register</string>
    <string name="my_reviews_empty">You have no reviews</string>
    <string name="add_review_rest_name">Resturant Name</string>
    <string name="add_review_food">Food</string>
    <string name="add_review_service">Service</string>
    <string name="add_review_overall">Overall</string>
    <string name="add_review_content">Your Review</string>
    <string name="add_review_submit">Submit</string>
    <string name="profile_picture_filename">profilePicture</string>
    <string name="default_profile_location">Users/DefaultProfilePicture.jpg</string>
    <string name="add_review_upload_image">Upload Image</string>
    <string name="add_review_include_image">Include Image</string>
    <string name="add_review_food_name">Food Name</string>
    <string name="reviews_food_reviewed">Food Reviewed</string>
    <string name="add_review_include_location">Include Location</string>
    <string name="my_reviews_location_tag">Location Tag</string>
    <string name="my_reviews_edit_review">Edit Review</string>
    <string name="search_rest_search">Search</string>
    <string name="search_rest_rest_name">Restaurant Name</string>
    <string name="search_rest_restaurant_name">Restaurant Name</string>
    <string name="restaurant_restaurant_name">Restaurant Name</string>
    <string name="review_like">Like</string>
    <string name="review_123_dummy_data">123</string>
    <string name="signup_empty_field">You have left a field empty :(</string>
    <string name="signup_empty_email">Email cannot be empty</string>
    <string name="signup_empty_password">Password cannot be empty</string>
    <string name="signup_empty_username">User Name cannot be empty</string>
    <string name="collection_ref_users">/Users</string>
    <string name="storage_ref_users">/Users</string>
    <string name="collection_ref_reviews">/Reviews</string>
    <string name="image_storage_ref_users">Users</string>
    <string name="document_ref_email">Email</string>
    <string name="document_ref_profilepicture">ProfilePicture</string>
    <string name="document_ref_likes">Likes</string>
    <string name="document_ref_overall">Overall</string>
    <string name="n_a">Avg Review Score \n N/A </string>
    <string name="document_ref_username">UserName</string>
    <string name="document_ref_restaurantname">RestaurantName</string>
    <string name="document_ref_content">Content</string>
    <string name="document_ref_date">Date</string>
    <string name="document_ref_food">Food</string>
    <string name="document_ref_service">Service</string>
    <string name="document_ref_picture">Picture</string>
    <string name="document_ref_foodname">FoodName</string>
    <string name="document_ref_geopoint">Geopoint</string>
    <string name="document_ref_likedby">LikedBy</string>
    <string name="snackbar_not_logged_in_msg">You need to be logged in to do this</string>
    <string name="review_denied_location_permission">You did not grant location permission :(</string>
    <string name="users_storage_profile_picture_reference">%1$s/%2$s</string>
    <string name="storage_user_profile_picture_new_reference">Users/%1$s/%2$s</string>
    <string name="reviews_storage_new_image_reference">Reviews/%1$s/%2$s</string>
    <string name="extras_doc_id">docId</string>
    <string name="extras_for_edit">forEdit</string>
    <string name="lat_long_from_geopoint">geo:%1$s,%2$s</string>
    <string name="extras_restname">RestName</string>
    <string name="implicit_image_intent">image/*</string>
    <string name="date_format">dd/MM/yyyy</string>


</resources>