<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rest_card"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rest_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_title"
                android:textAlignment="center"
                android:textColor="@color/md_theme_light_onPrimaryContainer"
                android:textSize="20sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rest_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textColor="@color/md_theme_light_onPrimaryContainer" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/profile_picture"
                    android:src="@drawable/person_24"
                    app:shapeAppearanceOverlay="@style/circleImageView" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rest_post_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_date"
                android:textColor="@color/md_theme_light_onPrimaryContainer" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rest_overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/review_overall"
                android:textColor="@color/md_theme_light_onPrimaryContainer" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rest_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/review_service"
                    android:textColor="@color/md_theme_light_onPrimaryContainer" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rest_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:text="@string/review_food"
                    android:textColor="@color/md_theme_light_onPrimaryContainer" />
            </GridLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/rest_food_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/reviews_food_reviewed"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rest_food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/review_food_name"
                android:textAlignment="center"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/rest_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/my_reviews_location_tag"
                android:src="@drawable/baseline_map_24"
                android:background="@null"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rest_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/review_content"
                android:textAlignment="center"
                android:textColor="@color/md_theme_light_onPrimaryContainer" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/rest_review_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/my_reviews_edit_review"
        app:layout_constraintStart_toEndOf="@+id/rest_card"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>