<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp">

            <!-- Use sample image -->
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/add_review_button"
                android:layout_width="350dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/add_review_desc"
                app:srcCompat="@drawable/add_notes_24"
                android:scaleType="fitEnd"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:text="@string/add_review"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="28sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="10dp">

            <!-- Use sample image -->
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/search_restaurant_button"
                android:layout_width="350dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/search_rest_desc"
                app:srcCompat="@drawable/restaurant_24"
                android:scaleType="fitEnd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:layout_gravity="start|center_vertical"
                android:text="@string/search_rest"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="28sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="10dp">

            <!-- Use sample image -->
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/my_reviews_button"
                android:layout_width="350dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/my_reviews_desc"
                app:srcCompat="@drawable/restaurant_menu_24"
                android:scaleType="fitEnd"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:text="@string/my_reviews"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="28sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <!-- Use sample image -->
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/my_account_button"
                android:layout_width="350dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/my_account_desc"
                app:srcCompat="@drawable/person_24"
                android:scaleType="fitEnd"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:text="@string/my_account"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="28sp" />

        </com.google.android.material.card.MaterialCardView>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>