<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReview">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/add_review_overall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_rest_name" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/add_review_overall_rating_bar"
        style="@style/myRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/add_review_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_rest_name"
        app:layout_constraintVertical_bias="0.062" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_review_rest_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/add_review_rest_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/add_review_food_rating_bar"
        style="@style/myRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/add_review_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_rest_name" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/add_review_service_rating_bar"
        style="@style/myRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toEndOf="@+id/add_review_food_rating_bar"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_review_content"
        android:layout_width="287dp"
        android:layout_height="186dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="@string/add_review_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_overall_rating_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_review_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_content"
        app:layout_constraintVertical_bias="0.917" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/include_image_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review_include_image"
        app:layout_constraintBottom_toTopOf="@+id/add_review_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_food_rating_bar"
        app:layout_constraintVertical_bias="0.427" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_review_upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_review_upload_image"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/add_review_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_image_switch"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_review_food_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/add_review_food_name"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/add_review_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_upload_image"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/add_review_location_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review_include_location"
        app:layout_constraintBottom_toTopOf="@+id/add_review_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/include_image_switch"
        app:layout_constraintTop_toBottomOf="@+id/add_review_service_rating_bar"
        app:layout_constraintVertical_bias="0.427" />

</androidx.constraintlayout.widget.ConstraintLayout>