<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restaurant">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/restaurant_rest_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/restaurant_restaurant_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/restaurant_scoreCardView"
        android:layout_width="133dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/md_theme_light_secondaryContainer"
        app:cardCornerRadius="0dp"
        app:contentPadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_rest_name">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restaurant_avg_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_avg"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_onSecondaryContainer" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/restaurant_totalCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/md_theme_light_secondaryContainer"
        app:cardCornerRadius="0dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@+id/restaurant_scoreCardView"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_rest_name">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restaurant_total_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_total"
            android:textAlignment="center"
            android:textColor="@color/md_theme_light_onSecondaryContainer" />


    </com.google.android.material.card.MaterialCardView>

    <view
        android:id="@+id/restaurant_recycler_view"
        class="androidx.recyclerview.widget.RecyclerView"
        android:layout_width="414dp"
        android:layout_height="559dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>